# ShWriter

./: .gitignore  CMakeLists.txt  CustomTextEditor.qml  Main.qml  README.md  ShellView.qml  WriteEdit.qml  filesystemmodel.cpp  filesystemmodel.h  leaderDialog.qml  linenumbermodel.h  main.cpp  pic.qrc
CommandRunner/: CMakeLists.txt  commandrunner.cpp
Config/: Config.qml
FileInfo/: CMakeLists.txt  cmake_install.cmake  file.cpp  file.h  file_dir.cpp  file_dir.h  fileio.cpp  fileio.h  filerw.cpp  filerw.h
FileSysteamModule/: CMakeLists.txt  filesystemmodel.cpp  filesystemmodel.h
ImageViewer/: CMakeLists.txt  ImageViewer.qml
Plugin/ImageViewer/: CMakeLists.txt  ImageList.qml  ImageViewItem.qml  ImageViewer.qml  imageicon.qrc  imageviewer.cpp  imageviewer.h  qmldir
Plugin/ImageViewer/example/: example.cpp  example.qml
Qml/: Colors.qml  Editor.qml  FileSystemView.qml  FooterView.qml  HandleView.qml  ImageList.qml  ImageView.qml  LineNumberArea.qml  MEditor.qml  MyMenu.qml  NMenu.qml  NMenuBar.qml  SettingView.qml  Sidebar.qml  Terminal.qml  TextEditor.qml  WEditor.qml
syntaxhighlighter/: CMakeLists.txt  highlighter.cpp
textEdit/: Sidebar.qml  TextEditor.qml
